code cleanup - correcting code smells